--- a/styles.css
+++ b/styles.css
@@ -44,10 +44,10 @@
       background-color: white;
       display: flex;
       border-radius: 10px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       overflow: hidden;
       width: 800px;
       height: 450px;
+      box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
       
     }
     
